# meli_mleng_2024

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
db-client-service/: Dockerfile  main.py  pyproject.toml
monitoring/: dashboard.yml  my_dashboard.json  prometheus.yml
price-anomaly/: Dockerfile  README.md  app.py  params.yaml  pyproject.toml
price-anomaly/artifacts/models/617d0093-466e-4db4-97fc-5916064d6a29/: model.pkl
price-anomaly/notebooks/: initial_exploration.ipynb
price-anomaly/price_anomaly/: __init__.py  config.py  dataset_builder.py  model_builder.py
tests/: test_dbclient_api.py  test_model_api.py  test_others.py
