[tool.poetry]
name = "db-client-service"
version = "0.1.0"
description = ""
authors = ["Pedro <48163181+neuralgremlin@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pymongo = "^4.7.3"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
